# wumpus-llm-agent

./: README.md  dump_metrics.sh  pyproject.toml  requirements.txt  run_game.sh  run_trials.sh
evals/: eval-notebook.html  eval-notebook.ipynb  game_metrics_detailed_trial1.csv  game_metrics_detailed_trial2.csv  generate_notebook.sh
src/: game_db.py  game_handler.py  game_planner.py  main.py
tests/: test_game_handler.py
