[project]
name = "wumpus-llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "instructor>=1.6.3",
    "jupyter>=1.1.1",
    "litellm>=1.51.3",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pexpect>=4.9.0",
    "pytest>=8.3.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
[tool.pytest.ini_options]
pythonpath = [
    "src"
]
